.omo/evidence/20260615-codegraph-omo-integration/task-11-red.txt
# TODO 11 RED FIRST - ship verification missing before implementation
$ node scripts/check-third-party-notices.mjs --ship
THIRD-PARTY-NOTICES.md: 36 required notice entries present
exit=0

$ npm pack --dry-run --json 2>/dev/null | node -e ...THIRD-PARTY...
<anonymous_script>:1
Bundled 30 modules in 8ms
^

SyntaxError: Unexpected token 'B', "Bundled 30"... is not valid JSON
    at JSON.parse (<anonymous>)
    at Socket.<anonymous> ([eval]:1:74)
    at Socket.emit (node:events:521:24)
    at endReadableNT (node:internal/streams/readable:1734:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21)

Node.js v26.0.0
exit=1
